Fix user avatar cutting off

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1047,6 +1047,14 @@ h2 {
   width: 2.75rem;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-\[3\.2rem\] {
+  width: 3.2rem;
+}
+
 .min-w-\[8rem\] {
   min-width: 8rem;
 }
@@ -2541,6 +2549,14 @@ h2 {
 
   .sm\:w-14 {
     width: 3.5rem;
+  }
+
+  .sm\:w-\[3\.8rem\] {
+    width: 3.8rem;
+  }
+
+  .sm\:w-\[3\.9rem\] {
+    width: 3.9rem;
   }
 
   .sm\:flex-row {
